--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="css/global.css">
+  <!-- <link rel="stylesheet" href="css/global.css"> -->
+  <link rel="stylesheet" href="dist/styles/all.min.css">
 
   <!-- JS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
